@@ -243,3 +243,4 @@
 20260108 ./var/www/cjdns/hia/watchlist/hia-parse-stats.sh added.
 20260108 ./var/www/cjdns/hia/watchlist/hia-parse-nfs.sh added.
 20260108 ./var/www/cjdns/hia/watchlist/hia-parse-nodeinfo.sh added.
+20260108 ./var/www/cjdns/hia/watchlist/hia-parse-proxy.sh added.
